--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,10 @@ height: 250px;
   }
  .value p,
  .value img{
-  padding: 35px;
+  padding: 0 35px 20px 35px;
+ }
+ .value h3{
+  padding:0 30px;
  }
 
   .tassel-us {
